# diogenet_py

./: .gitignore  .vscode.code-workspace  COMPILING.md  MANIFEST.in  README.md  RUNNING.md  STRUCTURE.md  all_places_graph.csv  closeness.val  g.graphml  grafo1.graphml  help.py  i1b7eqy1.html  lcl6yz26.html  new_Nodes_Life_of_Pythagoras_Iamblichus.csv  o2ajk3vp.html  ojbh9vbf.html  output.txt  prueba.html  prueba1.html  r3ftut2b.html  requirements.txt  setup.cfg  travel_edges_graph.csv  wsgi.py  zpua9lq9.html
application/: __init__.py  app.py  main.py
application/plotlydash/: dashboard.py
application/templates/: base.html  horus.html  map.html  sidebar_base.html
client/: .babelrc  .eslintrc.json  package-lock.json  package.json  tsconfig.json  webpack.config.js
client/src/: baseURLS.ts  graphLibrary.ts  horus.ts  jquery-range.d.ts  leaflet-html-legend.d.ts  map.ts  styles.ts
client/styles/: _bootstrap.scss  _theme.scss  horus.scss  main.scss  map.scss
data_analysis_module/: data_access.py  network_graph.py
diogenet_py/: __init__.py  app.py  app_flask_backup.py  cent_betweenness.R  cent_closeness.R  cent_degree.R  cent_eigenvector.R  data_access.py  network_graph.py  r_shell.py  test.r  test.txt
diogenet_py/static/: bundle.js  bundle.js.map
docs/: Makefile  conf.py  index.rst  make.bat
horus/: FlaskApp.wsgi  app.py  index.py
horus/assets/: tabs.css
map/: FlaskApp.wsgi  app.py  data.csv  flight_paths.csv  index copy.py  index.py  map.ipynb  newdata.csv
r_scripts/: cent_betweenness.R  cent_eigenvector.R  centralization_scores.r  igraph_libraries.R
(+80 files in other folders)
