[metadata]
name = diogenetpy
version = 0.1.0
long_description = file: README.md
long_description_content_type = text/markdown

[options]
zip_safe = False
include_package_data = True
python_requires = >=3.6, <4
packages = find:
install_requires =
    setuptools >=46.3, <47
    Flask >=1.1, <2
    python-igraph >=0.8, <0.9
    pandas >=1.0, <1.1
    requests >=2.23, <3

[options.entry_points]
console_scripts =
    diogenet-py = diogenet_py.main:main

[options.extras_require]
docs =
    Sphinx >=3.0, <4
dev =
    Sphinx >=3.0, <4
    black
    flake8

[flake8]
max-line-length = 88
extend-ignore = E203
exclude = .git,__pycache__/,docs/_build,docs/conf.py,dist/
