[metadata]
name = diogenetpy
version = 0.1.0
long_description = file: README.md
long_description_content_type = text/markdown

[options]
zip_safe = False
include_package_data = True
python_requires = >=3.6
packages = find:
install_requires =
    dash>=2.0.0
    dash_bootstrap_components>=1.0.2
    Flask>=2.0.2
    numpy>=1.19.0
    pandas>=1.0.5
    plotly>=5.0.0
    python_igraph>=0.9.9
    pyvis>=0.1.8.2
    requests>=2.23.0
    setuptools>=58.0.4
    gunicorn>=20.0.4

[options.entry_points]
console_scripts =
    diogenet-py = diogenet_py.main:main

[options.extras_require]
docs =
    Sphinx >=3.0, <4
dev =
    Sphinx >=3.0, <4
    black
    flake8

[flake8]
max-line-length = 88
extend-ignore = E203
exclude = .git,__pycache__/,docs/_build,docs/conf.py,dist/
